add: roadmap delete and new endpoints
