# static/swagger.json
@@ -141,7 +141,6 @@
         "tags": ["Notes"],
         "summary": "Deletes user note",
         "description": "Deletes a user note using the given note object id",
-        "consumes": ["multipart/form-data"],
         "security": [{ "Bearer": [] }],
         "parameters": [
           {
@@ -159,7 +158,7 @@
         }
       }
     },
-    "/roadmap/goals": {
+    "/roadmap_goals/": {
       "get": {
         "tags": ["Roadmap"],
         "summary": "Get all user roadmap goals",
@@ -168,6 +167,59 @@
         "responses": {
           "200": { "description": "User Roadmap Goals Retrieved Successfully" },
           "401": { "description": "Missing or invalid token" }
+        }
+      }
+    },
+    "/roadmap_goals/new": {
+      "post": {
+        "tags": ["Roadmap"],
+        "summary": "Create a new custom roadmap goal",
+        "description": "Adds a new goal and rearranges goals based on order",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User custom goal",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "order": { "type": "integer" },
+                "title": { "type": "string" },
+                "brief": { "type": "string" }
+              },
+              "required": ["order", "title", "brief"]
+            }
+          }
+        ],
+        "responses": {
+          "201": { "description": "User Roadmap Goal Created Successfully" },
+          "400": { "description": "Missing or invalid fields" },
+          "401": { "description": "Missing or invalid token" },
+          "409": { "description": "User can only have up to 20 goals" }
+        }
+      }
+    },
+    "/roadmap_goals/delete/{goal_order}": {
+      "delete": {
+        "tags": ["Roadmap"],
+        "summary": "Deletes user goal",
+        "description": "Deletes a user goal using the given goal order",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "goal_order",
+            "type": "integer",
+            "required": true,
+            "description": "User goal order"
+          }
+        ],
+        "responses": {
+          "200": { "description": "Goal deleted" },
+          "400": { "description": "Missing or invalid file" },
+          "404": { "description": "User/Goal not found" }
         }
       }
     }
